# chat-efficient

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: constraints.txt  main.yaml
chatefficient/: __init__.py  app.py  app_langchain.py  app_llama2.py  app_openai.py  app_translator.py  streamlit_demo.py
docs/: aws_sagemaker_quickstart.md  getting_started.md  project_specific_setup.md  quickstart.md  release_process.md  using_poetry.md
notebooks/: Chroma.ipynb  LangChain.ipynb  frontier-ai-paper.txt  openai.ipynb  utils.py
tests/: __init__.py  test_chatefficient.py
